<resources>
    <string name="app_name">ToDo App</string>
    <string name="todo_list_title">Todos</string>
    <string name="todo_list_no_todos_title">No active todos</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="todo_list_visibility_title">Show completed</string>
    <string name="todo_list_visibility_off_title">Hide completed</string>
    <string name="todo_list_add_todo_title">Add todo</string>
    <string name="todo_list_completed_count" formatted="false">Done - %d</string>
    <string name="todo_item_view_hint">What need to do…</string>
    <string name="todo_item_view_save">SAVE</string>
    <string name="todo_item_view_priority">Priority</string>
    <string name="todo_item_view_before">Make before</string>
    <string name="todo_item_view_delete">Delete</string>
    <string name="todo_item_view_priority_default">No</string>
    <string name="todo_item_view_priority_low">Low</string>
    <string name="todo_item_view_priority_high">High</string>
    <string name="todo_list_action_complete">Todo completed</string>
    <string name="todo_list_action_not_complete">Todo not completed</string>
    <string name="todo_list_action_edit">Edit</string>
    <string name="todo_list_action_delete">Delete</string>
    <string name="todo_list_date_before">before %s</string>
    <string name="todo_item_view_date_pattern">MMMM d, yyyy</string>
    <string name="authorization_view_sign_in">Sign in</string>
    <string name="authorization_view_login_hint">Login</string>
    <string name="authorization_view_password_hint">Password</string>
    <string name="authorization_view_continue">Continue without authorization</string>
    <string name="authorization_view_mandatory_field">Mandatory field</string>
    <string name="authorization_view_authorization">Authorization</string>
    <string name="exception_message_bad_request">Bad request: %s %s</string>
    <string name="exception_message_server_error">Server error. Try later</string>
    <string name="exception_message_token_error">Wrong login or password</string>
    <string name="exception_message_unsync_error">Data is out of sync</string>
    <string name="exception_message_duplicate_error">This task already exists</string>
    <string name="exception_message_not_found_error">The task is missing from the server</string>
    <string name="exception_message_auth_error">Invalid Authorization</string>
    <string name="exception_message_network_error">No internet connection</string>
    <string name="exception_message_unknown_error">Unknown error</string>
    <string name="exception_message_bad_request_error">Bad request</string>
    <string name="snackbar_text_cancel">Cancel</string>
    <string name="snackbar_text">Delete %s (%d sec)</string>
    <string name="settings_theme_system">How to system</string>
    <string name="settings_theme_light">Always light</string>
    <string name="settings_theme_dark">Always dark</string>
    <string name="settings_toast_message_empty">Username cannot be empty</string>
    <string name="settings_toast_message_few">Username must be 4–14 characters long</string>
    <string name="settings_toast_message_success">Username successfully changed</string>
    <string name="settings_title_text">Settings</string>
    <string name="settings_username_text">Username</string>
    <string name="settings_theme_text">Theme</string>
    <string name="settings_change_button_text">Change</string>
    <string name="settings_logout_button_text">Sing out</string>

</resources>