<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="presentation.AppActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:id="@+id/settings_back"
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/common_spacing"
            android:text="@string/settings_title_text"
            tools:text="Настройки" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/todo_item_separator_down"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/support_separator" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_spacing"
        android:src="@drawable/ic_theme" />

    <LinearLayout
        android:id="@+id/settings_change_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@drawable/ripple_effect"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_card">

        <TextView
            style="@style/style_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/settings_theme_text"
            tools:text="Тема оформления" />

        <TextView
            android:id="@+id/settings_theme_text"
            style="@style/style_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lines="1"
            android:textColor="@color/label_tertiary"
            tools:text="Всегда тёмная" />

    </LinearLayout>

    <View
        android:id="@+id/todo_item_separator_up"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@color/support_separator" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_spacing"
        android:src="@drawable/ic_user" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_user_title"
            style="@style/style_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/settings_username_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Имя пользователя" />

        <EditText
            android:id="@+id/settings_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:inputType="text|textCapSentences"
            android:maxLength="14"
            android:maxLines="1"
            android:textColor="@color/label_tertiary"
            app:layout_constraintStart_toStartOf="@+id/settings_user_title"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_title"
            tools:text="User" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_change_user_name"
            style="@style/ChangeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_change_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Изменить" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@color/support_separator" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_logout"
        style="@style/SignInButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="@dimen/common_spacing"
        android:text="@string/settings_logout_button_text"
        tools:text="Выйти из аккаунта" />

</LinearLayout>
