<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/todo_list_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/todo_list_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back_primary"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/todo_list_expanded_container"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:background="@color/back_primary"
                android:orientation="vertical"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <TextView
                    android:id="@+id/todo_list_title"
                    style="@style/style_title_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="60dp"
                    android:text="@string/todo_list_title"
                    android:textColor="@color/label_primary"
                    app:layout_constraintBottom_toTopOf="@id/todo_list_subtitle"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/todo_list_subtitle"
                    style="@style/style_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="60dp"
                    android:textColor="@color/label_primary"
                    app:layout_constraintBottom_toTopOf="@+id/todo_list_app_bar_spacing"
                    app:layout_constraintStart_toStartOf="parent" />

                <Space
                    android:id="@+id/todo_list_app_bar_spacing"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/todo_list_app_bar_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo_list_visibility_title"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="16dp"
                    android:src="@drawable/ic_visibility"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/color_blue" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/todo_list_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/back_primary"
                android:visibility="invisible"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/todo_list_toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:text="@string/todo_list_title"
                    android:textColor="@color/label_primary" />

                <ImageView
                    android:id="@+id/todo_list_toolbar_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todo_list_visibility_title"
                    android:paddingHorizontal="16dp"
                    android:src="@drawable/ic_visibility"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/color_blue" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/todo_list_empty_view"
        style="@style/style_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/todo_list_no_todos_title"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            app:cardCornerRadius="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/todo_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/back_elevated"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/view_todo_item" />

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todo_list_add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/todo_list_add_todo_title"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/color_blue"
        app:shapeAppearance="@drawable/fab_shape"
        app:tint="@color/color_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>